# RecipeUI

./: .all-contributorsrc  .eslintrc.json  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  index.html  package copy.json  package.json  pnpm-lock.yaml  script.sh  tailwind.config.js  turbo.json  vite.config.ts
.github/workflows/: main.yaml  main.yml
apps/cookbook/: .gitignore  README.md
apps/desktop/: README.md  next.config.js  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/docs/: docusaurus.config.js  package.json
apps/docs/blog/: authors.yml
apps/home/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
apps/ui/: .gitignore  middleware.ts  next.config.js  package.json
apps/web/: middleware.ts  next.config.js  package.json  script.sh  tailwind.config.js  tsconfig.json
cookbook/: README.md
cookbook/openapi-parser/: .gitignore  package.json
docs/: docusaurus.config.js  package-lock.json
docs/docs/: intro.md
recipebook/openapi-parser/: index.js  pnpm-lock.yaml
recipeui/: package.json  pnpm-lock.yaml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src/app/: layout.tsx
src/assets/: docLinks.json  recipes.json
src/components/: Navbar.tsx  RecipeContainer.tsx  RouteTypeLabel.tsx  Sidebar.tsx
src/state/: faoijsfoi.ts  recipeAuth.ts  recipeSession.ts
src/types/: recipes.ts
src/utils/: constants.ts  main.ts
ui/: next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
(+250 files in other folders)
